--- a/Beach-details.html
+++ b/Beach-details.html
@@ -94,10 +94,10 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/Beach1.png" class="img-fluid" alt="">
-            <img src="assets/img/Beach2.png" class="img-fluid" alt="">
-            <img src="assets/img/Beach3.png" class="img-fluid" alt="">
-            <img src="assets/img/Beach4.png" class="img-fluid" alt="">
+            <img src="assets/img/beachDetailsImg/Beach1.png" class="img-fluid" alt="">
+            <img src="assets/img/beachDetailsImg/Beach2.png" class="img-fluid" alt="">
+            <img src="assets/img/beachDetailsImg/Beach3.png" class="img-fluid" alt="">
+            <img src="assets/img/beachDetailsImg/Beach4.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
