--- a/LLF-details.html
+++ b/LLF-details.html
@@ -77,10 +77,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>U.S.A Visitor Centers</h2>
+          <h2>LLF Studio</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>U.S.A Visitor Centers</li>
+            <li>LLF Studio</li>
           </ol>
         </div>
 
@@ -94,20 +94,19 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter1.png" class="img-fluid" alt="">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter2.png" class="img-fluid" alt="">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter3.png" class="img-fluid" alt="">
+            <img src="assets/img/LLFDetailsImg/LLF-1.PNG" class="img-fluid" alt="">
+            <img src="assets/img/LLFDetailsImg/LLF-2.PNG" class="img-fluid" alt="">
+            <img src="assets/img/LLFDetailsImg/LLF-3.PNG" class="img-fluid" alt="">
+            <img src="assets/img/LLFDetailsImg/LLF-4.jpg" class="img-fluid" alt="">
+
           </div>
 
           <div class="portfolio-info">
             <h3>Information</h3>
             <ul>
-              <li><strong>Languages Used</strong>: HandleBars, Javascript, MySQL, CSS, API, Express, Node </li>
-              <li><strong>Project URL</strong>: <a
-                  href="https://young-shore-67722.herokuapp.com/">https://young-shore-67722.herokuapp.com/</a>
-              </li>
-              <li><strong>Github</strong>: <a
-                  href="https://github.com/sophiaorlando/State-Visitor-Centers">https://github.com/sophiaorlando/State-Visitor-Centers</a>
+              <li><strong>Software Used</strong>: Final Cut Pro X </li>
+              <li><strong>Published URL</strong>: <a
+                  href="https://www.instagram.com/tv/CGDzfJiplOM/" target="_blank">https://www.instagram.com/tv/CGDzfJiplOM/</a>
               </li>
             </ul>
           </div>
@@ -115,10 +114,14 @@
         </div>
 
         <div class="portfolio-description">
-          <h2>U.S.A Visitor Centers</h2>
+          <h2>LLF Studio</h2>
           <p>
-            Traveling cross country? Here is your next stop! Discover every visitor center in the United States with this 
-            application, including the average gas price per state to spend less time thinking, and more time sight-seeing. 
+            Sponsored by <a href="https://www.travelingmom.com/" target="_blank">TravelingMom,</a> I produced an IGTV
+            advertisement for <a href="https://llfstudio.com/" target="_blank">LLF Studios,</a> a local high-end jewler
+            company to highlight their new Face Mask Chain product. It was published on <a
+              href="https://www.instagram.com/travelingmom/channel/" target="_blank">TravelingMom Instagram account</a>
+            and gained over 220 views. I filmed the footage using an iPhone and edited the
+            advertisement with Final Cut Pro X.
           </p>
         </div>
 
