--- a/Zion-details.html
+++ b/Zion-details.html
@@ -77,10 +77,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>U.S.A Visitor Centers</h2>
+          <h2>Hiking The Narrows</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>U.S.A Visitor Centers</li>
+            <li>Hiking The Narrows</li>
           </ol>
         </div>
 
@@ -94,20 +94,17 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter1.png" class="img-fluid" alt="">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter2.png" class="img-fluid" alt="">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter3.png" class="img-fluid" alt="">
+            <img src="assets/img/ZionDetailsImg/ZION-1.PNG" class="img-fluid" alt="">
+            <img src="assets/img/ZionDetailsImg/ZION-2.PNG" class="img-fluid" alt="">
+            <img src="assets/img/ZionDetailsImg/ZION-3.jpg" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Information</h3>
             <ul>
-              <li><strong>Languages Used</strong>: HandleBars, Javascript, MySQL, CSS, API, Express, Node </li>
-              <li><strong>Project URL</strong>: <a
-                  href="https://young-shore-67722.herokuapp.com/">https://young-shore-67722.herokuapp.com/</a>
-              </li>
-              <li><strong>Github</strong>: <a
-                  href="https://github.com/sophiaorlando/State-Visitor-Centers">https://github.com/sophiaorlando/State-Visitor-Centers</a>
+              <li><strong>Software Used</strong>: Final Cut Pro X </li>
+              <li><strong>Published URL</strong>: <a
+                  href="https://www.instagram.com/travelingmom/channel/" target="_blank">https://www.instagram.com/travelingmom/channel/</a>
               </li>
             </ul>
           </div>
@@ -115,10 +112,10 @@
         </div>
 
         <div class="portfolio-description">
-          <h2>U.S.A Visitor Centers</h2>
+          <h2>Hiking The Narrows</h2>
           <p>
-            Traveling cross country? Here is your next stop! Discover every visitor center in the United States with this 
-            application, including the average gas price per state to spend less time thinking, and more time sight-seeing. 
+            Sponsored by <a href="https://www.travelingmom.com/" target="_blank">TravelingMom,</a> I produced a 3-part
+            IGTV series featuring The Narrows in Zion National Park. The series reached 1,734 users. I edited the IGTV's using Final Cut Pro X. 
           </p>
         </div>
 
