--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
       <div class="section-title">
         <h2>About</h2>
       </div>
-  
+
       <div class="row meInfo">
-        
+
         <div class="col-lg-4" data-aos="fade-right">
           <img src="assets/img/profPic.png" class="img-fluid" alt="">
         </div>
@@ -129,11 +129,11 @@
             <div class="col-lg-12">
               <ul id="listStyle">
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday: </strong>27 April 1998</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone: </strong>(203) 321-6518</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email: </strong><a href = "mailto: sophia19orlando@gmail.com">sophia19orlando@gmail.com</a></li>
-
+                <li><i class="icofont-rounded-right"></i> <strong>Email: </strong><a
+                    href="mailto: sophia19orlando@gmail.com">sophia19orlando@gmail.com</a></li>
                 <li><i class="icofont-rounded-right"></i> <strong>City: </strong>Greater New York Area</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree: </strong>University of Arizona, Bachelor of Arts in Information
+                <li><i class="icofont-rounded-right"></i> <strong>Degree: </strong>University of Arizona, Bachelor of
+                  Arts in Information
                   Science &amp; Electronic-Society</li>
               </ul>
             </div>
@@ -158,7 +158,7 @@
         </div>
       </div>
     </section>
-    
+
     <!-- End Features Section -->
 
     <!-- ======= Portfolio Section ======= -->
@@ -173,13 +173,17 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-fullStack">Full Stack Projects</li>
+              <li data-filter=".filter-videography">Videography</li>
+              <li data-filter=".filter-igtv">IGTV</li>
+
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-fullStack">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/NYTS.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -190,7 +194,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-fullStack">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/beachImg.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -201,13 +205,63 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-fullStack">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/visitorCenterImg.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/visitorCenterImg.png" data-gall="portfolioGallery" class="venobox"
                   title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="VisitorCenter-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-videography">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Disney.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Disney.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="Disney-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-videography">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Flag-Iceland.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Flag-Iceland.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="Iceland-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-videography">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Germany.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Germany.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="Germany-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-igtv">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/LLF.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/LLF.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="LLF-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-igtv">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Zion.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Zion.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="Zion-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
