--- a/Disney-details.html
+++ b/Disney-details.html
@@ -77,10 +77,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>U.S.A Visitor Centers</h2>
+          <h2>Disney World Roller Coasters</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>U.S.A Visitor Centers</li>
+            <li>Disney World Roller Coasters</li>
           </ol>
         </div>
 
@@ -94,20 +94,16 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter1.png" class="img-fluid" alt="">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter2.png" class="img-fluid" alt="">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter3.png" class="img-fluid" alt="">
+            <img src="assets/img/DisneyDetailsImg/Disney-1.png" class="img-fluid" alt="">
+            <img src="assets/img/DisneyDetailsImg/Disney-2.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Information</h3>
             <ul>
-              <li><strong>Languages Used</strong>: HandleBars, Javascript, MySQL, CSS, API, Express, Node </li>
-              <li><strong>Project URL</strong>: <a
-                  href="https://young-shore-67722.herokuapp.com/">https://young-shore-67722.herokuapp.com/</a>
-              </li>
-              <li><strong>Github</strong>: <a
-                  href="https://github.com/sophiaorlando/State-Visitor-Centers">https://github.com/sophiaorlando/State-Visitor-Centers</a>
+              <li><strong>Software Used</strong>: Adobe Premiere Pro </li>
+              <li><strong>Published URL</strong>: <a
+                  href="https://www.youtube.com/watch?v=jN3d3NB8248&t=2s" target="_blank">https://www.youtube.com/watch?v=jN3d3NB8248&t=2s</a>
               </li>
             </ul>
           </div>
@@ -115,10 +111,13 @@
         </div>
 
         <div class="portfolio-description">
-          <h2>U.S.A Visitor Centers</h2>
+          <h2>Disney World Roller Coasters</h2>
           <p>
-            Traveling cross country? Here is your next stop! Discover every visitor center in the United States with this 
-            application, including the average gas price per state to spend less time thinking, and more time sight-seeing. 
+            Sponsored by <a href="https://www.travelingmom.com/" target="_blank">TravelingMom,</a> I traveled with <a
+              href="https://time.com/2969805/the-worlds-fastest-talking-woman-will-impress-you-but-also-stress-you-out/" target="_blank">Fran Capo</a>, Guiness
+            World Record's fastest talking woman for the
+            past two decades, to Disney World in Orlando, FL. I filmed the footage using an iPhone and edited the film
+            using Adobe Premiere Pro.
           </p>
         </div>
 
