--- a/Germany-details.html
+++ b/Germany-details.html
@@ -77,10 +77,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>U.S.A Visitor Centers</h2>
+          <h2>Discovering Germany</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>U.S.A Visitor Centers</li>
+            <li>Discovering Germany</li>
           </ol>
         </div>
 
@@ -94,20 +94,19 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter1.png" class="img-fluid" alt="">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter2.png" class="img-fluid" alt="">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter3.png" class="img-fluid" alt="">
+            <img src="assets/img/GermanyDetailsImg/Germany-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/GermanyDetailsImg/Germany-2.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Information</h3>
             <ul>
-              <li><strong>Languages Used</strong>: HandleBars, Javascript, MySQL, CSS, API, Express, Node </li>
-              <li><strong>Project URL</strong>: <a
-                  href="https://young-shore-67722.herokuapp.com/">https://young-shore-67722.herokuapp.com/</a>
+              <li><strong>Software Used</strong>: Final Cut Pro X </li>
+              <li><strong>Published URL</strong>: <a
+                  href="https://www.youtube.com/watch?v=3mcnqw8kja4">https://www.youtube.com/watch?v=3mcnqw8kja4</a>
               </li>
-              <li><strong>Github</strong>: <a
-                  href="https://github.com/sophiaorlando/State-Visitor-Centers">https://github.com/sophiaorlando/State-Visitor-Centers</a>
+              <li><strong>Published Article</strong>: <a
+                  href="https://www.travelingmom.com/travel-tips/small-group-family-tours-in-europe/">https://www.travelingmom.com/travel-tips/small-group-family-tours-in-europe/</a>
               </li>
             </ul>
           </div>
@@ -115,10 +114,13 @@
         </div>
 
         <div class="portfolio-description">
-          <h2>U.S.A Visitor Centers</h2>
+          <h2>Discovering Germany</h2>
           <p>
-            Traveling cross country? Here is your next stop! Discover every visitor center in the United States with this 
-            application, including the average gas price per state to spend less time thinking, and more time sight-seeing. 
+            Sponsored by <a href="https://www.travelingmom.com/" target="_blank">TravelingMom,</a> I traveled to
+            Germany to create a family destination video. The video was used in a published article on <a
+              href="https://www.travelingmom.com/travel-tips/small-group-family-tours-in-europe/"
+              target="_blank">TravelingMom. </a>I filmed the footage with an iPhone and edited the film using Final Cut
+            Pro X.
           </p>
         </div>
 
