--- a/Iceland-details.html
+++ b/Iceland-details.html
@@ -77,10 +77,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>U.S.A Visitor Centers</h2>
+          <h2>Hidden Iceland Tour</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>U.S.A Visitor Centers</li>
+            <li>Hidden Iceland Tour</li>
           </ol>
         </div>
 
@@ -94,31 +94,28 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter1.png" class="img-fluid" alt="">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter2.png" class="img-fluid" alt="">
-            <img src="assets/img/VisitorCenterDetailsImg/VisitorCenter3.png" class="img-fluid" alt="">
+            <img src="assets/img/IcelandDetailsImg/Iceland-3.png" class="img-fluid" alt="">
+            <img src="assets/img/IcelandDetailsImg/Iceland-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/IcelandDetailsImg/Iceland-1.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Information</h3>
             <ul>
-              <li><strong>Languages Used</strong>: HandleBars, Javascript, MySQL, CSS, API, Express, Node </li>
-              <li><strong>Project URL</strong>: <a
-                  href="https://young-shore-67722.herokuapp.com/">https://young-shore-67722.herokuapp.com/</a>
-              </li>
-              <li><strong>Github</strong>: <a
-                  href="https://github.com/sophiaorlando/State-Visitor-Centers">https://github.com/sophiaorlando/State-Visitor-Centers</a>
+              <li><strong>Software Used</strong>: Final Cut Pro X </li>
+              <li><strong>Published URL</strong>: <a
+                  href="https://www.youtube.com/watch?v=XyuIrDLizE4">https://www.youtube.com/watch?v=XyuIrDLizE4</a>
               </li>
             </ul>
           </div>
-
         </div>
 
         <div class="portfolio-description">
-          <h2>U.S.A Visitor Centers</h2>
+          <h2>Hidden Iceland Tour</h2>
           <p>
-            Traveling cross country? Here is your next stop! Discover every visitor center in the United States with this 
-            application, including the average gas price per state to spend less time thinking, and more time sight-seeing. 
+            Sponsored by <a href="https://www.travelingmom.com/" target="_blank">TravelingMom,</a> I traveled to
+            Iceland with a tour provided by, <a href="https://hiddeniceland.is/" target="_blank">Hidden Iceland</a>, to
+            capture destination content. I filmed the footage using an iPhone and edited the film using Final Cut Pro X. 
           </p>
         </div>
 
