--- a/NYTS-details.html
+++ b/NYTS-details.html
@@ -94,8 +94,8 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/NYTS1.png" class="img-fluid" alt="">
-            <img src="assets/img/NYTS2.png" class="img-fluid" alt="">
+            <img src="assets/img/NYTSDetailsImg/NYTS1.png" class="img-fluid" alt="">
+            <img src="assets/img/NYTSDetailsImg/NYTS2.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
