--- a/index.html
+++ b/index.html
@@ -215,6 +215,16 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-fullStack">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/BudgetTracker.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/BudgetTracker.png" data-gall="portfolioGallery" class="venobox"
+                  title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="BudgetTracker-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-videography">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Disney.jpg" class="img-fluid" alt="">
