--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Sophia Orlando</h1>
       <p>I <span class="typed"
-          data-typed-items="am a Full Stack Web Developer, am a Videographer, love Star Wars, play Golf, am an Astronomy nut "></span>
+          data-typed-items="am a Software Engineer, am a Videographer, love Star Wars, play Golf, am an Astronomy nut "></span>
       </p>
     </div>
   </section><!-- End Hero -->
