--- a/index.html
+++ b/index.html
@@ -185,6 +185,17 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-fullStack">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/steroids.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/steroids.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i
+                    class="bx bx-plus"></i></a>
+                <a href="Weather-App.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-fullStack">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/NYTS.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/NYTS.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i
