--- a/Weather-App.html
+++ b/Weather-App.html
@@ -77,10 +77,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Hiking The Narrows</h2>
+          <h2>Hourly Weather Application on Steroids</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Hiking The Narrows</li>
+            <li>Hourly Weather Application</li>
           </ol>
         </div>
 
@@ -94,17 +94,20 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/ZionDetailsImg/ZION-1.PNG" class="img-fluid" alt="">
-            <img src="assets/img/ZionDetailsImg/ZION-2.PNG" class="img-fluid" alt="">
-            <img src="assets/img/ZionDetailsImg/ZION-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/WeatherAppDetailsImg/WeatherDemo.gif" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Information</h3>
             <ul>
-              <li><strong>Software Used</strong>: Final Cut Pro X </li>
-              <li><strong>Published URL</strong>: <a
-                  href="https://www.instagram.com/travelingmom/channel/" target="_blank">https://www.instagram.com/travelingmom/channel/</a>
+              <li><strong>Languages/ Libraries Used</strong>: Javascript, React, Nodejs, Bootstrap, Fetch
+                API </li>
+              <li><strong>Published URL</strong>: <a href="https://guarded-citadel-48915.herokuapp.com/"
+                  target="_blank">https://guarded-citadel-48915.herokuapp.com/</a>
+              </li>
+              </li>
+              <li><strong>Github</strong>: <a
+                  href="https://github.com/sophiaorlando/hourlyWeatherApp">https://github.com/sophiaorlando/hourlyWeatherApp</a>
               </li>
             </ul>
           </div>
@@ -112,10 +115,10 @@
         </div>
 
         <div class="portfolio-description">
-          <h2>Hiking The Narrows</h2>
+          <h2>Hourly Weather Application on Steroids</h2>
           <p>
-            Sponsored by <a href="https://www.travelingmom.com/" target="_blank">TravelingMom,</a> I produced a 3-part
-            IGTV series featuring The Narrows in Zion National Park. The series reached 1,734 users. I edited the IGTV's using Final Cut Pro X. 
+            This application uses Javascript's React library and is intended to give users an accessible way to find
+            hourly weather times AND more in any city you can think of! 
           </p>
         </div>
 
