--- a/Beach-details.html
+++ b/Beach-details.html
@@ -103,7 +103,7 @@
           <div class="portfolio-info">
             <h3>Information</h3>
             <ul>
-              <li><strong>Languages Used</strong>: Javascript, MySQL, Sequilize, Moment.js, Node.js, Express, API</li>
+              <li><strong>Languages Used</strong>: Javascript, MySQL, Sequelize, Moment.js, Node.js, Express, API</li>
               <li><strong>Project URL</strong>: <a
                   href="https://thawing-temple-82462.herokuapp.com/">https://thawing-temple-82462.herokuapp.com/</a>
               </li>
